--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
 		      </plugin>
 		      
 		      <plugin>
-		      	<artifactId>mave-surefire-plugin</artifactId>
+		      	<artifactId>maven-surefire-plugin</artifactId>
 		      	<version>2.22.0</version>
 		      	<dependencies>
 		      		<dependency>
