--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
 		      
 		      <plugin>
 		      	<artifactId>maven-surefire-plugin</artifactId>
-		      	<version>2.22.0</version>
+		      	<version>2.22.0</version><!--$NO-MVN-MAN-VER$-->
 		      	<dependencies>
 		      		<dependency>
 		      				<groupId>org.junit.platform</groupId>
